package org.nhlstenden.jabberpoint.decorator;

import java.awt.Color;
import java.awt.Font;

public class Style implements StyleComponent {
    private static final String FONTNAME = "Helvetica";

    public int indent;
    public Color color;
    public Font font;
    public int fontSize;
    public int leading;

    public Style(int indent, Color color, int points, int leading) {
        this.indent = indent;
        this.color = color;
        this.fontSize = points;
        this.font = new Font(FONTNAME, Font.BOLD, points);
        this.leading = leading;
    }

    @Override
    public void createStyles() {
        System.out.println("Base style created: " + this.toString());
    }

    @Override
    public Color getColor() {
        return color;
    }

    @Override
    public Font getFont(float scale) {
        return font.deriveFont(fontSize * scale);
    }

    @Override
    public int getIndent() {
        return indent;
    }

    @Override
    public int getLeading() {
        return leading;
    }

    @Override
    public String toString() {
        return "[" + indent + ", " + color + "; " + fontSize + " on " + leading + "]";
    }
}
